white space fixed home page

--- a/template/scss/_features.scss
+++ b/template/scss/_features.scss
@@ -83,7 +83,7 @@
     position: relative;
     z-index: 2;
     transition: all 0.5s ease;
-    margin: -260px 0 0px;
+    margin: -220px 0 0px;
     box-shadow: $shadow;
     .title {
         font-size: 20px;
